--- a/src/main/webapp/views/student.html
+++ b/src/main/webapp/views/student.html
@@ -16,13 +16,42 @@
 <script type="text/javascript" src="/SSMall/js/vue.js"></script>
 <script type="text/javascript" src="/SSMall/js/common.js"></script>
 <title>学生</title>
+<style type="text/css">
+	
+</style>
 </head>
 <body>
 <div id="teacherVue">
 	<div class="panel-body">
 		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">学生</h3>
+			<div class="panel-heading" style=" height:50px">
+				<div class="navbar-header pull-right" role="navigation">
+					<ul class="nav ace-nav" style="background-color: rgba(255, 255, 255, 0)">
+						<li class="light-blue" id="userInfo" style="background-color: rgba(255, 255, 255, 0)">
+							<a data-toggle="dropdown" href="#" class="dropdown-toggle" style="margin-top:0px;background-color: rgba(255, 255, 255, 0); float: right;">
+								<span class="user-info" style="background-color: rgba(255, 255, 255, 0); float: left;">
+									<span style="font-size: 14px; font-family: Microsoft Yahei">您好：</span>
+									<span style="font-size: 16px; font-family: Microsoft Yahei">{{name}}</span>
+								</span> 
+							</a>
+							<ul class="user-menu pull-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close" style="margin-top:40px">
+								<li>
+									<a @click="updateUserInfo">
+										<i class="glyphicon"></i>修改账户信息
+									</a>
+								</li>
+								<li>
+									<a href="/SSMall/views/login.html">
+										<i class="icon-off"></i>退出
+									</a>
+								</li>
+							</ul>
+							
+						</li>
+					</ul>
+					<!-- /.ace-nav -->
+				</div>
+				<!-- <h3 class="panel-title">学生</h3> -->
 			</div>
 			<div id="toolbar">
 				<form id="searchForm" style="margin-left: 10px;">
@@ -57,13 +86,14 @@
 				<thead>
 					<tr>
 						<th data-formatter="rowNoFormatter">序号</th>
-						<th data-field="title">作业题目</th>
 						<th data-field="updateTime">修改时间</th>
-						<th data-field="teacherName">发布人</th>
-						<th data-field="state" data-formatter="stateFormatter">作业状态</th>
 						<th data-field="subNum" data-formatter="deliveryTypeFormatter">科目</th>
-						<th data-field="submitUrl">答案</th>
-						<th data-field="publishUrl" data-formatter="publishUrlFormatter">作业详情</th>
+						<th data-field="title">作业题目</th>
+						<th data-field="teacherName">发布人</th>
+						<th data-field="stuName">学生姓名</th>
+						<th data-field="state" data-formatter="stateFormatter">作业状态</th>
+						<th data-field="question" data-formatter="questionFormatter">题目</th>
+						<th data-field="answer">答案</th>
 						
 					</tr>
 				</thead>
@@ -89,9 +119,9 @@
 							</div>-->		
 					</form>	
 				</div>
-				<div style="text-align: center;">
+				<div style="text-align: center;" id="modalFoot" >
                        <button type="button" class="btn btn-primary" @click="submit" >提交</button>
-                       <button type="button" class="btn btn-default back" style="margin-left:30px">返回</button>
+                       <button type="button" class="btn btn-default" data-dismiss="modal" style="margin-left:30px">取消</button>
 				</div>
 			</div>
 			<!-- /.modal-content -->
@@ -109,6 +139,7 @@ var ID = "";//当前行的id
 var vm = new Vue({
     el:'#teacherVue',
     data:{
+    	name:"",
     	job:{},
     	grades:[],
     	subjects:[]
@@ -120,8 +151,9 @@ var vm = new Vue({
     	submit :function(){
     		var answers = pacageData();
     		var param = {};
-    		param.answers = answers;
+    		param.answer = answers;
     		param.id = ID;
+    		param.state = "2";
     		var url = baseUrl+"/working/updateAnswser";
     		$.ajax({
     		        type: "POST",
@@ -130,6 +162,8 @@ var vm = new Vue({
     		        dataType:"json",
     		        success: function(resultData){
     					if(resultData.state==0){//保存成功
+    						$("#workingModal").modal("hide");
+    						$("#table").bootstrapTable('refresh');
     						layer.msg('保存成功', {
   							  icon: 1,
   							});
@@ -140,6 +174,10 @@ var vm = new Vue({
     					 }           	 
     		        }
     		    });
+    	},
+    	//更新个人信息
+    	updateUserInfo :function(){
+    		console.log("更新");
     	}
     },
     mounted: function () {
@@ -150,9 +188,33 @@ var vm = new Vue({
     	initStuClass();
     	//初始化科目信息
     	initSubject();
+    	//获取当前用户信息
+    	initUser();
       }
 });
-
+/* 初始化个人信息 */
+function initUser(){
+	var url = baseUrl+"/student/queryUserByStuNum";
+	 $.ajax({
+       type: "POST",
+       data:{
+    	   stuNum : username
+       },
+       url: url,
+       dataType:"json",
+       success: function(resultData){
+			if(resultData.state==0){//查询成功
+				vm.name = resultData.data.name;
+			 }else{
+				 //查询失败
+				 layer.msg(resultData.message, {
+		   				icon: 0,
+		   			});
+			 }         	 
+       }
+   });
+	
+}
 /* 初始化班级信息 */
 function initStuClass(){
 	var url = baseUrl+"/class/list";
@@ -250,10 +312,6 @@ function stateFormatter(value, row, index) {
 		return "<span class='text-success'>已批改</span>";
 	}
 }
-//作业详情
-function publishUrlFormatter(value, row, index){
-	return [ "<a href='javascript:void(0)' onclick='workingInfo(\""+row.id+"\",\""+row.title+"\",\""+row.publishUrl+"\" )' class='btn btn-xs ' title='查看'>编辑</a>" ].join('');
-}
 //班级信息
 function classNameFormatter(value, row, index) {
 	var grades = vm.grades;
@@ -274,35 +332,64 @@ function deliveryTypeFormatter(value, row, index) {
 	}
 	return "<span class='text-info'></span>";
 }
-
-//
-function workingInfo(id,title,publishUrl){
+//作业详情
+function questionFormatter(value, row, index){
+	return [ "<a href='javascript:void(0)' onclick='workingInfo(\""+row.id+"\",\""+row.title+"\",\""+row.state+"\",\""+row.question+"\",\""+row.answer+"\",\""+row.grade+"\" )' class='btn btn-xs ' title='查看'>查看</a>" ].join('');
+}
+//作业编辑
+function workingInfo(id,title,state,question,answer,grade){
 	$("#workingModal").modal();
-	//$('#answerForm')[0].reset();
-	//$("#myModal").modal("hide");
+	$('#answerForm')[0].reset();
 	ID = id;
 	$("#title").text(title);
-	var questions = publishUrl.split(":;");
-	var html = '';
-	var i;
-	for (i = 0; i < questions.length; i++) {
-		var question = questions[i];
-		html += '<div class="form-group" id = "answergroup'+i+' ">'
-			+'<p><i>Q:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><i>'+question+'</i><p>'
-			+'<div>'
-			+'<i>A:</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'
-			+'<textarea rows="3" class="form-control" name="answer" id = "answer'+i+' "></textarea>'
-			+'</div>'
-			+'</div>'
+	var questions = question.split(":;");
+	var answers;
+	if(state!="1"){//待审批状态
+		answers = answer.split(":;");
 	}
-	flag = i;
+	if(state=="3"){//已审批状态
+		var grades = grade.split(":;");
+		var html = '';
+		for (var i = 0; i < questions.length; i++) {
+			var question = questions[i];
+			var answer = answers[i];
+			var	grade = grades[i];
+			html += '<div class="form-group" name="workgroup" style="padding-bottom:10px; border-bottom:1px solid #A9C9E2" >'
+				+'<p><i>Q:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><i>'+question+'</i><p>'
+				+'<p><i>A:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><i>'+answer+'</i><p>'
+				+'<p><i>点评:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><i>'+grade+'</i><p>'
+				+'</div>';
+		}
 		$("#answerForm").html(html);
+		$("#modalFoot").hide();
+	}else{
+		var html = '';
+		var i;
+		for (i = 0; i < questions.length; i++) {
+			var question = questions[i];
+			var answer = "";
+			if(state=="2"){
+				answer = answers[i];
+			}
+			html += '<div class="form-group" id = "answergroup'+i+'" style="padding-bottom:20px; border-bottom:1px solid #A9C9E2">'
+				+'<p><i>Q:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i><i>'+question+'</i><p>'
+				+'<div>'
+				+'<i>A:</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'
+				+'<textarea rows="3" class="form-control" name="answer" id = "answer'+i+'">'+answer+'</textarea>'
+				+'</div>'
+				+'</div>'
+		}
+		flag = i;
+		$("#answerForm").html(html);
+	}
+	
+	
 }
 //获取表单数据
 function pacageData(){
 	var data=""
 	for(var i = 0;i < flag; i++){
-		if(($("#answergroup"+i+"").length)>0){
+		if(($("#answer"+i+"").length)>0){
 			data = data + $("#answer"+i+"").val() + ":;"
 		}
 	}
