--- a/src/main/webapp/views/teacher.html
+++ b/src/main/webapp/views/teacher.html
@@ -11,8 +11,10 @@
 <script type="text/javascript" src="/SSMall/js/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="/SSMall/js/bootstrap-table/bootstrap-table.js"></script>
 <script type="text/javascript" src="/SSMall/js/bootstrap-select/bootstrap-select.min.js"></script>
-<script type="text/javascript" src="/SSMall/js/layer/layer.js"></script>
 <script type="text/javascript" src="/SSMall/js/validate/jquery.validate.min.js"></script>
+<script type="text/javascript" src="/SSMall/js/validate/bootstrapValidator.js"></script>
+<script type="text/javascript" src="/SSMall/js/validate/zh_CN.js"></script>
+<script type="text/javascript" src="/SSMall/js/layer/layer.js"></script>
 <script type="text/javascript" src="/SSMall/js/vue.js"></script>
 <script type="text/javascript" src="/SSMall/js/common.js"></script>
 <title>教师</title>
@@ -21,8 +23,33 @@
 <div id="teacherVue">
 	<div class="panel-body">
 		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">教师</h3>
+			<div class="panel-heading" style=" height:50px">
+				<div class="navbar-header pull-right" role="navigation">
+					<ul class="nav ace-nav" style="background-color: rgba(255, 255, 255, 0)">
+						<li class="light-blue" id="userInfo" style="background-color: rgba(255, 255, 255, 0)">
+							<a data-toggle="dropdown" href="#" class="dropdown-toggle" style="margin-top:0px;background-color: rgba(255, 255, 255, 0); float: right;">
+								<span class="user-info" style="background-color: rgba(255, 255, 255, 0); float: left;">
+									<span style="font-size: 14px; font-family: Microsoft Yahei">您好：</span>
+									<span style="font-size: 16px; font-family: Microsoft Yahei">{{teaInfo.name}}</span>
+								</span> 
+							</a>
+							<ul class="user-menu pull-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close" style="margin-top:40px">
+								<li>
+									<a @click="updateUserInfo">
+										<i class="glyphicon"></i>修改账户信息
+									</a>
+								</li>
+								<li>
+									<a href="/SSMall/views/login.html">
+										<i class="icon-off"></i>退出
+									</a>
+								</li>
+							</ul>
+							
+						</li>
+					</ul>
+					<!-- /.ace-nav -->
+				</div>
 			</div>
 			<div id="toolbar">
 				<form id="searchForm" style="margin-left: 10px;">
@@ -104,10 +131,67 @@
 									</div>
 							</div>	
 					</form>	
+					<div style="text-align: center;">
+	                       <button type="button" class="btn btn-primary" @click="submit" >提交</button>
+	                       <button type="button" class="btn btn-default" data-dismiss="modal" style="margin-left:30px">取消</button>
+					</div>
 				</div>
-				<div style="text-align: center;">
-                       <button type="button" class="btn btn-primary" @click="submit" >提交</button>
-                       <button type="button" class="btn btn-default" data-dismiss="modal" style="margin-left:30px">取消</button>
+			</div>
+			<!-- /.modal-content -->
+		</div>
+	</div>
+	
+	<!-- 模态框 -->
+	<div class="modal fade" id="teacherModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog" style="width:800px">
+			<div class="modal-content">
+				<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+						<h3 class="modal-title text-center">教师信息修改</h3>
+				</div>
+				<div class="modal-body">
+					<form class="form-horizontal" id="teaInfoForm" style="margin:30px">
+								<div class="form-group">
+									<div class="col-sm-4 control-label">姓名：</div>
+									<div class="col-sm-5" style="margin-top:7px">
+									{{teaInfo.name}}
+									</div>
+								</div>
+						 		<div class="form-group">
+									<div class="col-sm-4 control-label">工号：</div>
+									<div class="col-sm-5" style="margin-top:7px">
+										{{teaInfo.num}}
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="col-sm-4 control-label">新密码：</div>
+									<div class="col-sm-5">
+										<input type="password" class="form-control" name="password" v-model ="teaInfo.password" placeholder="请输入密码"/>
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="col-sm-4 control-label">确认密码：</div>
+									<div class="col-sm-5">
+										<input type="password" class="form-control" name="confirmPsw" placeholder="请再输入一遍密码"/>
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="col-sm-4 control-label">电话：</div>
+									<div class="col-sm-5">
+										<input type="text" class="form-control" name="phone" v-model ="teaInfo.phone" />
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="col-sm-4 control-label">邮箱：</div>
+									<div class="col-sm-5">
+										<input type="text" class="form-control" name="mail" v-model ="teaInfo.mail" placeholder="请输入邮箱"/>
+									</div>
+								</div>		
+					</form>	
+					<div style="text-align: center;" id="modalFoot" >
+	                       <button type="button" class="btn btn-primary" @click="submitTeacher" >提交</button>
+	                       <button type="button" class="btn btn-default" data-dismiss="modal" style="margin-left:30px">取消</button>
+					</div>
 				</div>
 			</div>
 			<!-- /.modal-content -->
@@ -125,6 +209,7 @@ var flag = 0;
 var vm = new Vue({
     el:'#teacherVue',
     data:{
+    	teaInfo:{},
     	job:{},
     	grades:[],
     	subjects:[]
@@ -160,6 +245,37 @@ var vm = new Vue({
     		        }
     		    });
     	},
+    	submitTeacher : function(){
+    		//表单校验
+    		if(!onsubmitFn()){
+    			return ;
+    		}
+    		var url = baseUrl+"/teacher/update";
+    		$.ajax({
+    		        type: "POST",
+    		        url: url,
+    		        data : vm.teaInfo ,
+    		        dataType:"json",
+    		        success: function(resultData){
+    					if(resultData.state==0){//保存成功
+    						$("#teacherModal").modal("hide");
+    						layer.msg('保存成功', {
+  							  icon: 1,
+  							});
+    					 }else{
+    						layer.msg('保存失败，请重新提交', {
+    							  icon: 0,
+    							});
+    					 }           	 
+    		        }
+    		    });
+    	},
+    	//更新个人信息
+    	updateUserInfo :function(){
+    		$("#teacherModal").modal();
+    		//$('#studentInfoForm')[0].reset();
+    		
+    	},
     	addWorking :function(){
     		window.location.href = baseUrl + "/views/working.html?username="+username;
     	}
@@ -172,9 +288,35 @@ var vm = new Vue({
     	initStuClass();
     	//初始化科目信息
     	initSubject();
+    	//获取当前教师用户信息 
+    	queryTeacher();
+    	//表单校验
+    	validateForm();
       }
 });
-
+/* 获取当前教师用户信息 */
+function queryTeacher(){
+	var url = baseUrl+"/teacher/queryTeacherByTeaNum";
+	 $.ajax({
+       type: "POST",
+       data:{
+    	   teaNum : username
+       },
+       url: url,
+       dataType:"json",
+       success: function(resultData){
+			if(resultData.state==0){//查询成功
+				vm.teaInfo = resultData.data
+			 }else{
+				 //查询失败
+				 layer.msg(resultData.message, {
+		   				icon: 0,
+		   			});
+			 }         	 
+       }
+   });
+	
+}
 /* 初始化班级信息 */
 function initStuClass(){
 	var url = baseUrl+"/class/list";
@@ -361,6 +503,75 @@ function getUrlParam(){
        }   
     }   
     return theRequest;   
+}
+//表单提交前再进行一次验证
+function onsubmitFn() {
+  var bootstrapValidator = $("#teaInfoForm").data("bootstrapValidator");
+  bootstrapValidator.validate();
+  return bootstrapValidator.isValid();
+}
+//表单验证
+function validateForm(){
+	$("#teaInfoForm").bootstrapValidator({
+	    message: 'This value is not valid',
+	    feedbackIcons: {
+	        valid: 'glyphicon glyphicon-ok',
+	        invalid: 'glyphicon glyphicon-remove',
+	        validating: 'glyphicon glyphicon-refresh'
+	    },
+	    fields: {
+	        password: {
+	        	message: "密码校验失败",
+	        	validators: {
+	        		notEmpty: {
+	        			message: "密码不能为空"
+	        		},
+	        		stringLength: {//检测长度  
+                      min: 6,  
+                      max: 30,  
+                      message: '密码长度必须在6-30之间'  
+                  },
+	        	}
+	        },
+	        confirmPsw: {
+	            message: "验证密码失败",
+	            validators: {
+	            	notEmpty: {
+	        			message: "密码输入不一致"
+	        		},
+	                identical: {//与指定控件内容比较是否相同，比如两次密码不一致  
+                      field: 'password',//指定控件name  
+                      message: '密码输入不一致'  
+                  }, 
+	            }
+	        },
+	       
+	        phone: {
+	            message: "手机号码校验失败",
+	            validators: {
+	            	notEmpty: {
+	                    message: "手机号不能为空"
+	                },
+	                regexp: {//正则验证  
+                      regexp: /^[1][3,4,5,7,8][0-9]{9}$/,  
+                      message: '请输入正确的手机号码'  
+                  }, 
+	            }
+	        },
+	        mail: {
+	            message: "邮箱校验失败",
+	            validators: {
+	            	notEmpty: {
+	                    message: "邮箱不能为空"
+	                },
+	            	emailAddress: {//验证email地址  
+                      message: '请输入正确的邮箱地址'  
+                  },  
+	            }
+	        },
+	    }
+	});
+
 }
 </script>
 </html>
