--- a/src/main/webapp/views/working.html
+++ b/src/main/webapp/views/working.html
@@ -82,7 +82,7 @@
 								</div>
 
 				</form>
-				<div style="text-align: center;">
+				<div style="text-align: center; margin-bottom:10px">
                        <button type="button" class="btn btn-primary" @click="submit" >发布</button>
                        <button type="button" class="btn btn-default back" style="margin-left:30px">返回</button>
 				</div>
